# heic-to-jpg-converter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  constants.rs  errors.rs  lib.rs  main.rs  validation.rs
