[package]
name = "heic-converter"
version = "1.0.0"
description = "A fast and simple HEIC to JPEG converter for macOS"
authors = ["HEIC Converter Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "heic_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["avif"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"

# Build optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

